@@ -5553,7 +5553,7 @@ else if (!strcmp(comando_sin_parametros,"smartload") || !strcmp(comando_sin_para
 												int i;
 												for (i=0;i<256;i++) {
                 	         	//z80_byte index_color=tbsprite_patterns[index_int][i];
-														 z80_byte index_color=tbsprite_pattern_get_value_index(index_int,i);
+														 z80_byte index_color=tbsprite_pattern_get_value_index_8bpp(index_int,i);
 	                	        escribir_socket_format(misocket,"%02X ",index_color);
 												}
 												escribir_socket(misocket,"\n");
@@ -5607,7 +5607,11 @@ else if (!strcmp(comando_sin_parametros,"smartload") || !strcmp(comando_sin_para
 							else {
 								for (;totalitems;totalitems--) {
 									int i;
-									for (i=0;i<4;i++) {
+
+									int tamanyo_sprite=4;
+									if (tbsprite_sprites[index_int][3] & 64) tamanyo_sprite++;
+
+									for (i=0;i<tamanyo_sprite;i++) {
 											z80_byte value_sprite=tbsprite_sprites[index_int][i];
 											escribir_socket_format(misocket,"%02X ",value_sprite);
 									}
@@ -5697,7 +5701,7 @@ else if (!strcmp(comando_sin_parametros,"smartload") || !strcmp(comando_sin_para
 			while (*s) {
 				valor=parse_string_to_number(s);
 				//tbsprite_patterns[index_int][i++]=valor;
-				tbsprite_pattern_put_value_index(index_int,i,valor);
+				tbsprite_pattern_put_value_index_8bpp(index_int,i,valor);
 				i++;
 
 				s=find_space_or_end(s);
