@@ -28,13 +28,15 @@ Improved ZRCP:
 -Added save-binary command
 
 Improved TBBlue emulation:
+-Added Layer2 modes 320x256 and 640x256
+-Added 4bpp sprites
 -Enable Timex video by default
 -Added altrom feature: now 48k and 128k mode works again
 -Legacy hi-res and border effects disabled by default. Reduces up to 13% cpu use or gain 17 FPS on my environment
 -Emulate register 0x8E (142) => Spectrum 128K Memory Mapping
 -Allow to download a 512 MB TBBlue SD official card (allowed download sizes: 32MB, 128MB, 512MB, 2 GB)
--Added Layer2 modes 320x256 and 640x256
 -Allow paths with backslashes on esxdos handler
+
 
 Improved debugging:
 -Added breakpoint action "reset-tstatp"
